@@ -13,6 +13,8 @@ PHP                                                                        NEWS
   accept lengths of 1024). (Felipe, andrew at lifescale dot com)
 - Fixed bug #45449 (filesize() regression using ftp wrapper). 
   (crrodriguez at suse dot de)
+- Fixed bug #45423 (fastcgi parent process doesn't invoke php_module_shutdown
+  before shutdown) (basant dot kukreja at sun dot com)
 - Fixed bug #45352 (Segmentation fault because of tick function on second
   request). (Dmitry)
 - Fixed bug #45312 (Segmentation fault on second request for array functions).
